fix wrap social

--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  flex-shrink: 0;
 
   max-width: 140px;
 }
